4.3.5 (2/8/2016):
* Bug Fix: Remove deprecation warnings for v5.0 for now. Will re-add once the version has landed.

4.3.4 (2/2/2016):
* Bug Fix: Fix incompatible change from v4.3.3.

4.3.3 (1/29/2016):

* Improvement: Add deprecation warnings in preparation for release of v5.0

4.3.2 (11/18/2015):

* Performance: Reduce memory allocations (#2056)

4.3.1 (9/9/2015):

* Backport of bugfix to `remove_column`, so it works in Rails 3 and 4
  c740fb171fe2f88c60b999d2a1c2122f2b8f43e9
* Fix GeometryParser regex for usage of '@>' flag
* `url` on a unpersisted record returns default_url
* spec deprecation warnings and failures
* README adjustments

4.3.0 (6/18/2015):

* Improvement: Update aws-sdk and cucumber gem versions.
* Improvement: Add `length` alias for `size` method in AbstractAdapter.
* Improvement: Removed some cruft
* Improvement: deep_merge! Attachment definitions
* Improvement: Switch to mimemagic gem for content-type detection
* Improvement: Allows multiple content types for spoof detector
* Bug Fix: Don't assume we have Rails.env if we have Rails
* Performance: Decrease Memory footprint
* Ruby Versioning: Drop support for 1.9.3 (EOL'ed)
* Rails Versioning: Drop support for 4.0.0 (EOL'ed)

4.2.4:

* Rollback backwards incompatible change, allowing paperclip to run on
  Ruby >= 1.9.2.

4.2.3:

* Fix dependency specifications (didn't work with Rails 4.1)
* Fix paperclip tests in CI

4.2.2:

* Security fix: Fix a potential security issue with spoofing

4.2.1:

* Improvement: Added `validate_media_type` options to allow/bypass spoof check
* Improvement: Added incremental backoff when AWS gives us a SlowDown error.
* Improvement: Stream downloads when usign aws-sdk.
* Improvement: Documentation fixes, includes Windows instructions.
* Improvement: Added pt-BR, zh-HK, zh-CN, zh-TW, and ja-JP locales.
* Improvement: Better escaping for characters in URLs
* Improvement: Honor `fog_credentials[:scheme]`
* Improvement: Also look for custom processors in lib/paperclip